deployment/base/10_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-logging-test-rs
  namespace: spring-logging-test
spec:
  type: ClusterIP
  selector:
    app: spring-logging-test
  ports:
    - name: rest-endpoint
      port: 8080
